superadmin apis
